--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.0",
+    "redux": "^3.7.2",
+    "redux-form": "^7.2.3",
     "styled-components": "^3.1.6"
   },
   "scripts": {
