--- a/package.json
+++ b/package.json
@@ -3,12 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-<<<<<<< HEAD
-    "material-design-icons": "^3.0.1",
-=======
     "axios": "^0.17.1",
+    "eslint": "^4.17.0",
     "json-server": "^0.12.1",
->>>>>>> ee8ac72c8f1d81a9551ed7541601e44ed93da475
+    "material-design-icons": "^3.0.1",
     "material-ui": "^0.20.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
