--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "redux": "^3.7.2",
     "redux-form": "^7.2.3",
     "redux-promise": "^0.5.3",
-    "styled-components": "^3.1.6"
+    "styled-components": "^3.1.6",
+    "superagent": "^3.8.2"
   },
   "scripts": {
     "start": "react-scripts start",
