--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.17.1",
+    "dropzone": "^5.3.0",
     "eslint": "^4.17.0",
     "json-server": "^0.12.1",
     "material-design-icons": "^3.0.1",
@@ -14,6 +15,7 @@
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.0",
+    "react-spinkit": "^3.0.0",
     "redux": "^3.7.2",
     "redux-form": "^7.2.3",
     "redux-promise": "^0.5.3",
