--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "json:server": "json-server --watch db.json --port 3004"
+  },
+  "devDependencies": {
+    "eslint-config-airbnb": "^16.1.0"
   }
 }
